name:                with-index
version:             0.1.0.0
license:             BSD3
build-type:          Simple
copyright:           2017 Phil Freeman
author:              Phil Freeman
cabal-version:       >=1.10

library
  hs-source-dirs:    lib
  exposed-modules:   Data.WithIndex
  build-depends:     base >=4.8 && <5
  exposed:           True
  buildable:         True
  default-language:  Haskell2010
